# examples

./: .gitignore
.github/workflows/: codeql.yml  picross.yml  rps.yml
codeql-demo/: .gitignore  settings.gradle.kts
codeql-demo/app/src/main/java/org/example/: App.java
coq/: Lecture.v
quickcheck/: picross.cabal  stack.yaml
quickcheck/app/: Main.hs
quickcheck/src/: Picross.hs
quickcheck/test/: Test.hs
rock-paper-scissors/: build.gradle
rock-paper-scissors/src/main/: AlwaysPaperAgent.java  AlwaysRockAgent.java  AlwaysScissorsAgent.java  HandShape.java  IAgent.java  LinkedList.java  LinkedListItem.java  Program.java  RandomAgent.java  TrackingAgent.java
rock-paper-scissors/src/test/: LinkedListTest.java
